--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -201,7 +201,8 @@
                 value='click here'> -->
                     <div class="ex-account text-center">
                         <p>Already have an account? LOGIN
-                            <a href="./login.ejs">here</a>
+                            <a href="
+                            login">here</a>
                         </p>
                         <div class="divider"></div>
                     </div>
